package dev.luanfernandes.biblioteca.domain.enums;

public enum EmprestimoStatus {
    ATIVO,
    FINALIZADO
}
