package dev.luanfernandes.biblioteca.domain.enums;

public enum FuncionarioCargo {
    ATENDENTE,
    GERENTE
}