package dev.luanfernandes.biblioteca.domain.enums;

public enum LivroStatus {
    ALUGADO,
    DISPONIVEL
}
