package dev.luanfernandes.biblioteca.domain.enums;

public enum UsuarioStatus {
    ATIVO,
    INATIVO
}
